@@ -16,14 +16,6 @@ margin-left: 0.2em;
 .state-itemcreated_waiting_advices, .label-state-itemcreated_waiting_advices {
     color: red !important;
 }
-#plone-contentmenu-workflow .state-itemcreated,
-#plone-contentmenu-workflow .state-itemcreated_waiting_advices {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: red;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid red;
-}
 
 .state-proposed_to_administrative_reviewer, .label-state-proposed_to_administrative_reviewer,
 .state-proposed_to_internal_reviewer, .label-state-proposed_to_internal_reviewer,
@@ -35,114 +27,39 @@ margin-left: 0.2em;
 .state-proposed_to_financial_manager, .label-state-proposed_to_financial_manager {
     color: DarkOrange !important;
 }
-#plone-contentmenu-workflow .state-proposed_to_administrative_reviewer,
-#plone-contentmenu-workflow .state-proposed_to_internal_reviewer,
-#plone-contentmenu-workflow .state-proposed_to_internal_reviewer_waiting_advices,
-#plone-contentmenu-workflow .state-proposed_to_director,
-#plone-contentmenu-workflow .state-proposed_to_finance,
-#plone-contentmenu-workflow .state-proposed_to_financial_controller,
-#plone-contentmenu-workflow .state-proposed_to_financial_reviewer,
-#plone-contentmenu-workflow .state-proposed_to_financial_manager {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: DarkOrange;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid DarkOrange;
-}
 
 .state-validated, .label-state-validated,
 .state-financial_advice_signed, .label-state-financial_advice_signed {
     color: blue !important;
 }
-#plone-contentmenu-workflow .state-validated,
-#plone-contentmenu-workflow .state-financial_advice_signed {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: blue;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid blue;
-}
 
 .state-presented, .label-state-presented {
     color: brown !important;
-}
-#plone-contentmenu-workflow .state-presented {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: brown;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid brown;
-}
-
-#plone-contentmenu-workflow .state-itemfrozen {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: cornflowerBlue;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid cornflowerBlue;
 }
 
 .state-accepted, .label-state-accepted,
 .state-sent_to_council_emergency, .label-state-sent_to_council_emergency {
     color: green !important;
 }
-#plone-contentmenu-workflow .state-accepted,
-#plone-contentmenu-workflow .state-sent_to_council_emergency {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: green;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid green;
-}
 
 .state-accepted_but_modified, .label-state-accepted_but_modified {
     color: green !important;
 }
-#plone-contentmenu-workflow .state-accepted_but_modified {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: green;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid green;
-}
 
-.state-pre_accepted, .label-state-pre_accepted {
+.state-pre_accepted, .label-state-pre_accepted,
+.state-accepted_and_returned, .label-state-accepted_and_returned {
     color: green !important;
-}
-#plone-contentmenu-workflow .state-pre_accepted {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: green;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid green;
 }
 
 .state-delayed, .label-state-delayed,
 .state-returned_to_proposing_group, .label-state-returned_to_proposing_group,
 .state-returned, .label-state-returned,
-.state-accepted_and_returned, .label-state-accepted_and_returned,
 .state-marked_not_applicable, .label-state-marked_not_applicable {
-    color: green !important;
-}
-#plone-contentmenu-workflow .state-delayed,
-#plone-contentmenu-workflow .state-returned_to_proposing_group,
-#plone-contentmenu-workflow .state-marked_not_applicable {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: grey;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid grey;
+    color: grey !important;
 }
 
 .state-refused, .label-state-refused {
     color: violet !important;
-}
-#plone-contentmenu-workflow .state-refused {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: violet;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid violet;
 }
 
 /* Colors on states */
@@ -150,56 +67,21 @@ margin-left: 0.2em;
 .state-created, .label-state-created {
     color: red !important;
 }
-#plone-contentmenu-workflow .state-created {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: red;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid red;
-}
 
 .state-frozen, .label-state-frozen {
     color: cornflowerBlue !important;
-}
-#plone-contentmenu-workflow .state-frozen {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: cornflowerBlue;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid cornflowerBlue;
 }
 
 .state-decided, .label-state-decided {
     color: black !important;
 }
-#plone-contentmenu-workflow .state-decided {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: black;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid black;
-}
 
 .state-decisions_published, .label-state-decisions_published {
     color: #436976 !important;
 }
-#plone-contentmenu-workflow .state-decisions_published {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: #436976;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid #436976;
-}
 
 .state-closed, .label-state-closed {
     color: grey !important;
-}
-#plone-contentmenu-workflow .state-closed {
-    border-radius: 0.5em 0.5em 0.5em 0.5em;
-    background-color: grey;
-    padding: 0 0.5em;
-    color: white !important;
-    border: 2px solid grey;
 }
 
 /* do the field 'titleForCouncil' take 100% width */
