@@ -303,26 +303,28 @@
                 <span class="item_attribute_label" i18n:translate="PloneMeeting_label_otherMeetingConfigsClonableTo"></span>:&nbsp;&nbsp;
                 <tal:displayOtherMeetingConfigsClonableTo tal:condition="otherMCs">
                     <span tal:content="context/displayOtherMeetingConfigsClonableTo">Other mc clonable to (Emergency)</span>
-                    <img src="show_council_data.png"
-                         id="showDataForCouncil"
-                         style="cursor: pointer;"
-                         tal:attributes="src string:${portal_url}/show_council_data.png"
-                         i18n:attributes="title" title="See/hide data used for council item" />
-                    <script type="text/javascript">
-                        $( "#showDataForCouncil" ).bind( "click", function(event) {
-                            event.preventDefault();
-                            var dataWhenSentToCouncil = $('#dataWhenSentToCouncil');
-                            dataWhenSentToCouncil.fadeToggle();
-                            });
-                    </script>
-                    <fieldset id="dataWhenSentToCouncil" style="display: none; margin-top: 0;">
-                        <legend i18n:translate="">Data that will be used once item will be in the council</legend>
-                        <span class="item_attribute_label" i18n:translate="MeetingLiege_label_labelForCouncil"></span>:&nbsp;&nbsp;
-                        <span metal:use-macro="python: here.widget('labelForCouncil', mode='view')" />
-                        <br />
-                        <span class="item_attribute_label" i18n:translate="MeetingLiege_label_privacyForCouncil"></span>:&nbsp;&nbsp;
-                        <span metal:use-macro="python: here.widget('privacyForCouncil', mode='view')" />
-                    </fieldset>
+                    <tal:to_clone_to_council_data condition="python: 'meeting-config-council' in otherMCs">
+                        <img src="show_council_data.png"
+                             id="showDataForCouncil"
+                             style="cursor: pointer;"
+                             tal:attributes="src string:${portal_url}/show_council_data.png"
+                             i18n:attributes="title" title="See/hide data used for council item" />
+                        <script type="text/javascript">
+                            $( "#showDataForCouncil" ).bind( "click", function(event) {
+                                event.preventDefault();
+                                var dataWhenSentToCouncil = $('#dataWhenSentToCouncil');
+                                dataWhenSentToCouncil.fadeToggle();
+                                });
+                        </script>
+                        <fieldset id="dataWhenSentToCouncil" style="display: none; margin-top: 0;">
+                            <legend i18n:translate="">Data that will be used once item will be in the council</legend>
+                            <span class="item_attribute_label" i18n:translate="MeetingLiege_label_labelForCouncil"></span>:&nbsp;&nbsp;
+                            <span metal:use-macro="python: here.widget('labelForCouncil', mode='view')" />
+                            <br />
+                            <span class="item_attribute_label" i18n:translate="MeetingLiege_label_privacyForCouncil"></span>:&nbsp;&nbsp;
+                            <span metal:use-macro="python: here.widget('privacyForCouncil', mode='view')" />
+                        </fieldset>
+                    </tal:to_clone_to_council_data>
                  </tal:displayOtherMeetingConfigsClonableTo>
                  <span tal:condition="not: otherMCs">-</span>
             </div>
